@@ -1,3 +1,12 @@
+2002-06-06  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* lib/am/configure.am (am__CONFIG_DISTCLEAN_FILES): New variable.
+	(distclean): Use it.
+	(maintainer-clean): Delete autom4te.cache and
+	$(am__CONFIG_DISTCLEAN_FILES).
+	* tests/maintclean.test: New file.
+	* tests/Makefile.am (TESTS): Add maintclean.test.
+
 2002-06-05  Miloslav Trmac  <trmac@popelka.ms.mff.cuni.cz>
 
 	* lib/am/dejagnu.am (site.exp): Quote build_alias, host_alias, and
